better policy engine eval preview
